--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mini-css-extract-plugin": "2.4.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +26,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "resolutions": {
+    "mini-css-extract-plugin": "2.4.5"
   },
   "browserslist": {
     "production": [
